--- a/Client/BlazorBlog.Client.csproj
+++ b/Client/BlazorBlog.Client.csproj
@@ -7,18 +7,29 @@
         <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(RunConfiguration)' == 'BlazorBlog' "/>
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'BlazorBlog' ">
+      <ExternalConsole>true</ExternalConsole>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+      <WarningLevel>4</WarningLevel>
+      <PlatformTarget>anycpu</PlatformTarget>
+    </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.6" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Shared\BlazorBlog.Shared.csproj"/>
+        <ProjectReference Include="..\Shared\BlazorBlog.Shared.csproj">
+          <Targets></Targets>
+          <OutputItemType></OutputItemType>
+          <ReferenceSourceTarget>ProjectReference</ReferenceSourceTarget>
+          <GlobalPropertiesToRemove>;WebPublishProfileFile</GlobalPropertiesToRemove>
+        </ProjectReference>
     </ItemGroup>
 
     <ItemGroup>
-        <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js"/>
+        <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
     </ItemGroup>
 
 </Project>
